# epimetheus.dbt

./: README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
models/correctness_checks/: dim_check.sql  fact_check_dbt.sql  schema.yml
models/example/: my_first_dbt_model.sql  schema.yml
models/marts/: dim_check.sql  dim_date.sql  dim_hour.sql  dim_xml.sql  dim_zip.sql  fact_check.sql  fct_check.sql  fct_record.sql  fct_record_full.sql  fct_xml.sql  fct_zip.sql  schema.yml
models/raw/: sources.yml
models/stg/: correctness_check.sql  sampled_record.sql  schema.yml  sent_xml  sent_xml.sql
models/xml_files/: schema.yml  xml_files_silver.sql
schedule_config/: profiles.yml
