[tool.poetry]
name = "epimetheus.dbt"
version = "0.1.0"
description = ""
authors = ["Jelle Vegter <jelle.vegter@nederlandseloterij.nl>"]

[tool.poetry.dependencies]
python = "^3.9.10"
dbt-databricks = "^1.0.3"
dbt-sqlserver = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
